--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "jinja2",
     "black",
     "huggingface-hub>=0.34.3",
-    "transformers<4.54.0",
+    "transformers>4.51.0,<4.54.0",
     "vllm>=0.5.5",
     "setuptools"
 ]
